# catcoder

./: .gitignore  README.md
catcoder/: requirements.txt
catcoder/java/: evaluation.py  extract_type_context.py  inference.py  metrics.py  retrieve_relevant_code.py  test_adapter.py  util.py
catcoder/java/prompts/: codegen
catcoder/rust/: evaluation.py  extract_type_context.py  inference.py  metrics.py  retrieve_relevant_code.py  test_adapter.py  util.py
catcoder/rust/prompts/: codegen
catcoder/tools/intellirust/: Cargo.toml  configure
catcoder/tools/intellirust/intellirust/: __init__.py  context.py  file_structure.py  intellirust.pyi
catcoder/tools/intellirust/src/: __private.rs  lib.rs
catcoder/tools/intellirust/src/analyzer/: workspace.rs
catcoder/tools/intellirust/src/binding/: class.rs  mod.rs
catcoder/tools/intellirust/src/visitor/: fn_visitor.rs  mod.rs  type_visitor.rs
catcoder/tools/java/: requirements.txt  setup.py
results/java/-cr/: codellama-13b_temp0.6_topp0.7_n10.json
results/java/-tc/: codellama-13b_temp0.6_topp0.7_n10.json
results/java/catcoder/: codegemma-7b_temp0.6_topp0.7_n10.json  codellama-13b_temp0.6_topp0.7_n10.json  codellama-7b_temp0.6_topp0.7_n10.json  codeqwen-7b_temp0.6_topp0.7_n10.json  deepseek-coder-6.7b_temp0.6_topp0.7_n10.json  llama3-8b_temp0.6_topp0.7_n10.json
results/java/infile/: codegemma-7b_temp0.6_topp0.7_n10.json  codellama-13b_temp0.6_topp0.7_n10.json  codellama-7b_temp0.6_topp0.7_n10.json  codeqwen-7b_temp0.6_topp0.7_n10.json  deepseek-coder-6.7b_temp0.6_topp0.7_n10.json  (+1 more)
(+26 files in other folders)
