[package]
name = "intellirust"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
panic = "abort"
opt-level = 3
codegen-units = 1

[lib]
name = "intellirust"
crate-type = ["cdylib", "rlib"]

[package.metadata.commands]
install = "maturin develop --release"

[dependencies.anyhow]
version = "1.0"

[dependencies.build-target]
version = "0.4.0"

[dependencies.pyo3-log]
version = "0.9.0"

[dependencies.log]
version = "0.4.20"

[dependencies.proc-macro2]
version = "1.0"
features = ["span-locations"]

[dependencies.pyo3]
version = "0.20.2"
features = ["extension-module"]

[dependencies.quote]
version = "1.0"

[dependencies.syn]
version = "2.0"
features = ["full", "visit", "extra-traits"]

[dependencies]
ra_ap_ide = "0.0.198"
ra_ap_vfs = "0.0.198"
ra_ap_project_model = "0.0.198"
ra_ap_paths = "0.0.198"
ra_ap_load-cargo = "0.0.198"
ra_ap_hir = "0.0.198"
ra_ap_cfg = "0.0.198"
ra_ap_ide_db = "0.0.198"